Fix sidebar icons spacing

--- a/static/assets/css/theme.css
+++ b/static/assets/css/theme.css
@@ -567,6 +567,7 @@ pre.chroma {
 
 .sidebar-link .fx-icon {
   width: 32px;
+  margin-right: 6px;
   font-size: 32px;
 }
 
